<resources>
    <string name="app_name">Guia do Mochileiro</string>
    <string name="title_activity_tela_inicial"></string>
    <string name="title_activity_login"></string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="nav_header_title">Usuário de teste</string>
    <string name="nav_header_subtitle">teste@teste.com</string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Opções</string>
    <string name="estrela_1">★</string>
    <string name="estrela_2">★★</string>
    <string name="estrela_3">★★★</string>
    <string name="estrela_4">★★★★</string>
    <string name="estrela_5">★★★★★</string>
    <string name="title_activity_mapa">Map</string>

    <string-array name="spinner_categoria">
        <item>Parque</item>
        <item>Praça</item>
        <item>Trilha</item>
        <item>Praia</item>
        <item>Lago</item>
        <item>Diversos</item>
    </string-array>

    <string-array name="spinner_avaliacao">
        <item>★</item>
        <item>★★</item>
        <item>★★★</item>
        <item>★★★★</item>
        <item>★★★★★</item>
    </string-array>
</resources>
